refactor: update CORS config to allow any origin